Add appendix labels

--- a/report/report.tex
+++ b/report/report.tex
@@ -74,8 +74,7 @@ standard.  The overall design as a task diagram is included below.
 
 In the following sections, the individual tasks from the above diagram
 are briefly described in addition to their inputs and outputs.  The
-state machines for these tasks are presented in the appendix.
-% TODO: Reference appendix section
+state machines for these tasks are presented in appendix \ref{app.sm}.
 
 \subsection{Tasks}
 
@@ -181,11 +180,15 @@ state machines for these tasks are presented in the appendix.
 \appendix
 
 \section{Appendix: State Machines}
+\label{app.sm}
 
 \subsection{Master Microcontroller}
+\label{app.sm.master}
 
 \subsection{Compute Microcontroller}
+\label{app.sm.compute}
 
 \subsection{Common Infrastructure}
+\label{app.sm.common}
 
 \end{document}
