Add input/output specifications for state machines

--- a/report/figures/master_mode_task.tex
+++ b/report/figures/master_mode_task.tex
@@ -1,10 +1,11 @@
-\begin{description}
-
-  \item [Input] PA0
-
-  \item [Output] device\_mode: enum
-
-\end{description}
+\begin{flushleft}
+  \begin{description}
+    \item [Input]
+      \verb#PA0#
+    \item [Output]
+      \verb#device_mode: enum#
+  \end{description}
+\end{flushleft}
 
 \begin{tikzpicture}[->,>=stealth',
     shorten >=1pt,
