--- a/report/report.tex
+++ b/report/report.tex
@@ -233,10 +233,87 @@ state machines for these tasks are presented in appendix \ref{app.sm}.
   \label{sm:1}
 \end{figure}
 
+\begin{figure}[H]
+  \centering
+  \caption{State machine for master detection task}
+  \input{figures/master_detection_task.tex}
+  \label{sm:2}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for master training task}
+  \input{figures/master_training_task.tex}
+  \label{sm:3}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for master display task}
+  \input{figures/master_display_task.tex}
+  \label{sm:4}
+\end{figure}
+
 \subsection{Compute Microcontroller}
 \label{app.sm.compute}
 
+\begin{figure}[H]
+  \centering
+  \caption{State machine for compute mode task}
+  \input{figures/compute_mode_task.tex}
+  \label{sm:5}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for compute reading task}
+  \input{figures/compute_reading_task.tex}
+  \label{sm:6}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for compute detection task}
+  \input{figures/compute_detection_task.tex}
+  \label{sm:7}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for compute training task}
+  \input{figures/compute_training_task.tex}
+  \label{sm:8}
+\end{figure}
+
 \subsection{Common Infrastructure}
 \label{app.sm.common}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for common LCD task}
+  \input{figures/common_lcd_task.tex}
+  \label{sm:9}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for common USART TX task}
+  \input{figures/common_usart_tx_task.tex}
+  \label{sm:10}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for common USART RX task}
+  \input{figures/common_usart_rx_task.tex}
+  \label{sm:11}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{State machine for common USART packet RX task}
+  \input{figures/common_usart_packet_rx_task.tex}
+  \label{sm:12}
+\end{figure}
 
 \end{document}
