Add link to demonstration video

--- a/report/report.tex
+++ b/report/report.tex
@@ -167,7 +167,7 @@ state machines for these tasks are presented in appendix \ref{app.sm}.
 
 \begin{description}
 
-  %\item [Demonstration Video] https://youtu.be/%TODO
+  \item [Demonstration Video] https://youtu.be/Kw6NZRzlpkQ
 
   \item [GitHub Repository] https://github.com/nokurn/roomdetect
 
