Add pinout diagram created with Fritzing

--- a/report/report.tex
+++ b/report/report.tex
@@ -86,6 +86,13 @@ listed in bold.
 
 \subsection{Pinout}
 
+\begin{figure}[H]
+  \centering
+  \noindent\includegraphics[scale=1.10]{pinout}
+  \caption{Pinout and schematic for project}
+  \label{schematic:1}
+\end{figure}
+
 \section{Software}
 
 The software designed for this project was implemented using the PES
