Add periods to task specifications

--- a/report/figures/common_lcd_task.tex
+++ b/report/figures/common_lcd_task.tex
@@ -9,6 +9,7 @@
       \verb#is_lcd_ready: bool#
     \item [Local]
       \verb#index: size#
+    \item [Period] 2 ms
   \end{description}
 \end{flushleft}
 
