--- a/report/figures/common_usart_packet_rx_task.tex
+++ b/report/figures/common_usart_packet_rx_task.tex
@@ -7,6 +7,7 @@
       \verb#usart_packet_rx_queue_size: size#;
       \verb#usart_packet_rx_queue_head: size#;
       \verb#usart_packet_rx_queue_tail: size#
+    \item [Period] 1 ms
   \end{description}
 \end{flushleft}
 
