--- a/report/figures/compute_detection_task.tex
+++ b/report/figures/compute_detection_task.tex
@@ -7,6 +7,7 @@
     \item [Output]
       \verb#detected_room: uint8#;
       \verb#should_poll_readings#
+    \item [Period] 16 ms
   \end{description}
 \end{flushleft}
 
