--- a/report/figures/compute_mode_task.tex
+++ b/report/figures/compute_mode_task.tex
@@ -5,6 +5,7 @@
     \item [Output]
       \verb#device_mode: enum#;
       \verb#training_room: uint8#
+    \item [Period] 16 ms
   \end{description}
 \end{flushleft}
 
