--- a/report/figures/compute_reading_task.tex
+++ b/report/figures/compute_reading_task.tex
@@ -10,6 +10,7 @@
       \verb#readings: accum[]#;
       \verb#index: size#;
       \verb#samples: size#
+    \item [Period] 1 ms
   \end{description}
 \end{flushleft}
 
