--- a/report/figures/compute_training_task.tex
+++ b/report/figures/compute_training_task.tex
@@ -7,6 +7,7 @@
       \verb#training_room: uint8#
     \item [Output]
       \verb#should_poll_readings#
+    \item [Period] 16 ms
   \end{description}
 \end{flushleft}
 
