--- a/report/figures/master_display_task.tex
+++ b/report/figures/master_display_task.tex
@@ -15,6 +15,7 @@
       \verb#lcd_position#
     \item [Local]
       \verb#last_room: uint8#
+    \item [Period] 20 ms
   \end{description}
 \end{flushleft}
 
