--- a/report/figures/master_mode_task.tex
+++ b/report/figures/master_mode_task.tex
@@ -4,6 +4,7 @@
       \verb#PA0#
     \item [Output]
       \verb#device_mode: enum#
+    \item [Period] 16 ms
   \end{description}
 \end{flushleft}
 
