--- a/report/figures/master_training_task.tex
+++ b/report/figures/master_training_task.tex
@@ -11,6 +11,7 @@
       \verb#usart_tx_queue#
     \item [Local]
       \verb#tick_count: uint16#
+    \item [Period] 20 ms
   \end{description}
 \end{flushleft}
 
