--- a/report/figures/common_usart_tx_task.tex
+++ b/report/figures/common_usart_tx_task.tex
@@ -7,6 +7,7 @@
       \verb#usart_tx_queue_tail: size#
     \item [Output]
       \verb#usart_tx_queue#
+    \item [Period] 1 ms
   \end{description}
 \end{flushleft}
 
